--- a/css.html/style.css
+++ b/css.html/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    background-color: transparent;
 }
 
 .header {
@@ -7,6 +8,7 @@ body {
 }
 
 #headergrid {
+
     display: flex;
     font-family: 'Montserrat', sans-serif;
     color: #333333;
@@ -17,7 +19,7 @@ body {
     justify-items: left;
     justify-content: flex-start;
     margin-left: 30px;
-    max-width: 120px;
+    max-width: 100px;
     height: auto;
     flex-grow: 1;
     padding-top: 10px;
@@ -40,7 +42,8 @@ body {
     display: inline-block;
     color: #333333;
     font-family: Montserrat, sans-serif;
-    font-size: 24px;
+    font-size: 18px;
+    text-transform: uppercase;
     justify-content: flex-end;
     text-decoration: none;
     margin-right: 20px;
@@ -85,7 +88,7 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 32px;
-    font-weight: bolder;
+    font-weight:bold;
 }
 
 .shortbio {
@@ -269,6 +272,7 @@ margin-bottom: 80px;
     background-color: transparent;
     border: #333333 solid 3px;
     color:#333333;
+    border-radius: 30px;
     font-size: 22px;
     margin-top:20px;
     margin-bottom:40px;
