--- a/css.html/style.css
+++ b/css.html/style.css
@@ -56,6 +56,9 @@ body {
     padding-top: 40px;
 }
 
+.top-con{
+    margin-top: 60px; 
+}
 
 .menuitems:hover {
     
@@ -92,7 +95,6 @@ body {
 
 .shortbio {
     margin-top: 40px;
-    margin-left: 20px;
     color:#333333;
     align-items: right;
     justify-items: right;
@@ -121,7 +123,6 @@ body {
 .h2-resume{
     color:#333333;
     margin-top: 30px;
-    margin-left: 20px;
     font-size: 28px;
     font-weight: lighter;
     border-radius: 30px;
@@ -314,14 +315,14 @@ margin-bottom: 80px;
 
 
 .skillsbg{
-    background-color: #333333;
+    background-color: transparent;
     padding-bottom: 2rem;
     padding-top: 2rem;
     flex-wrap: wrap;
 }
 
 .teamimage {
-max-width: 600px;
+max-width: 550px;
 height: auto;
 
 }
@@ -330,8 +331,8 @@ height: auto;
 .hskill{
     padding-left: 20px;
     padding-top: 100px;
-    background-color: #333333;
-    color: white;
+    background-color: transparent;
+    color:#333333;
 }
 
 h1 {
@@ -345,7 +346,6 @@ h3{
     font-weight: 200;
 
 }
-
 
 
 .skillimage{
