--- a/css.html/style.css
+++ b/css.html/style.css
@@ -323,6 +323,8 @@ margin-bottom: 80px;
     justify-content: center;
     align-items: center;
     max-width: 700px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
 }
 
@@ -331,6 +333,10 @@ margin-bottom: 80px;
     align-items: center;
     max-width: 700px;
 
+}
+
+.cs-img{
+    max-width: 500px; 
 }
 
 .view-all-button{
@@ -423,6 +429,7 @@ h4{
     font-size: 24px;
     font-weight: 200;
     padding-top: 60px;
+    text-transform: uppercase;
 
 }
 
