--- a/css.html/style.css
+++ b/css.html/style.css
@@ -328,16 +328,7 @@ margin-bottom: 80px;
 
 }
 
-.old{
-    justify-content: center;
-    align-items: center;
-    max-width: 700px;
 
-}
-
-.cs-img{
-    max-width: 500px; 
-}
 
 .view-all-button{
     background-color: #333333;
@@ -428,7 +419,7 @@ h4{
     color:#333333;
     font-size: 24px;
     font-weight: 200;
-    padding-top: 40px;
+    padding-top: 10px;
     text-transform: uppercase;
 
 }
@@ -525,12 +516,12 @@ p{
     }
     
     .uwh{
-        background-color:#005899 ;
-        color:white;
+        background-color:#F5F6FA;
+        color:#333333;
         padding: 10px;
     }
     .h2-intro{
-        color:white;
+        color:#333333;
         font-weight: lighter;
 
     }
@@ -539,7 +530,7 @@ p{
     }
 
     .h3-case-study{
-        color: white;
+        color:#333333
         font-weight: lighter;
     }
 
@@ -549,7 +540,7 @@ p{
     }
 
     .p-intro{
-        color:white;
+        color:#333333;
         font-weight: lighter;
     }
     .problem-image{
@@ -654,8 +645,157 @@ p{
     margin-top: 40px;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    max-height: 150px;
+   }
+
+   .conclusion-div-bar{
+    background-color:#F5F6FA;
+    margin-top: 40px;
+    justify-content: left;
+    align-items: left;
+    text-align: left;
+    max-height: 600px;
+    padding-left: 100px;
+   }
+   .edu-div-bar{
+    background-color:#F5F6FA;
+    margin-top: 40px;
+    max-height: 200px;
+   }
+  .edu-conclusion{
+   padding-bottom: 20px;
+
+
    }
    .number-ux-phase{
-    max-width: 100px;
+    max-width: 90px;
    }
+
+   .edu-number-ux-phase{
+    max-width: 90px;
+    justify-content: right;
+    align-items: right;
+    text-align: right;
+   }
+
+   .number-right{
+    justify-content: right;
+    align-items: right;
+    text-align: right;
+
+   }
+
+.h4-div-bar{
+    padding-bottom: 20px;
+   }
+
+.cs-img{
+    max-width: 500px; 
+}
+
+.big-cs-image{
+    max-width: 800px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.a-form-img{
+    max-height: 400px;
+}
   
+.center-c{
+    text-align: left;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+
+.old{
+    justify-content: center;
+    align-items: center;
+    max-height: 500px;
+
+}
+
+.img-test{
+    max-height: 400px;
+}
+
+.space-b{
+    margin-bottom: 60px;
+}
+
+.space-top{
+    padding-top: 40px;
+}
+
+.col-right{
+    background-color: #F5F6FA;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+}
+
+.div-block{
+display: flex;
+width: auto;
+height: auto;
+border-top: 0px solid #e3e2e1;
+border-bottom: 1px solid #e3e2e1;
+border-radius: 0px;
+margin-bottom: 40px;
+}
+
+.container.Tron {
+    background-color: transparent !important;
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+    text-align: left !important;
+    flex-direction: column;
+    height: 100%;
+}
+
+.display-4 {
+    text-align: left !important;
+    display: flex;
+    justify-content:left;
+    justify-items: left !important;
+    font-size: 48px;
+}
+
+
+.lead {
+    display: flex;
+    justify-content:left !;
+    text-align: left;
+    flex-direction: column;
+    color: #252525;
+  
+}
+
+.carousel-caption {
+  font-style: italic;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    flex-direction: column;
+    right: 10px  !important;
+    left: 10px  !important;
+
+}
+
+.carousel-indicators li {
+    background-color: #000;
+}
+
+.carousel-inner{
+    margin-bottom: 30px;
+}
+
