--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Inter', sans-serif;
     background-color: transparent;
+}
+
+p {
+    color: #333333;
+    font-size: 17px;
+    font-weight: lighter;
+
+}
+li{
+    font-weight: lighter;
+
 }
 
 .header {
@@ -8,10 +19,11 @@ body {
 }
 
 #headergrid {
-
-    display: flex;
-    font-family: 'Montserrat', sans-serif;
+    display:flex;
+    font-family: 'Inter', sans-serif;
     color: #333333;
+    align-items:center;
+    justify-content: space-between;
 }
 
 #logo {
@@ -30,6 +42,11 @@ body {
     flex-grow: 1;
     margin-right: 30px;
     margin-top: 40px;
+    align-items:flex-end;
+}
+
+.nav{
+    
 }
 
 .rightalignnavigation {
@@ -38,13 +55,13 @@ body {
 
 }
 
-.menuitems {
-    display: inline-block;
+.nav-link {
+    display: inline;
+    font-family: 'Inter', sans-serif;
     color: #333333;
-    font-family: Montserrat, sans-serif;
     font-size: 18px;
     text-transform: uppercase;
-    justify-content: flex-end;
+    justify-content:center;
     text-decoration: none;
     margin-right: 20px;
     padding: 10px;
@@ -61,12 +78,6 @@ body {
 }
 
 
-
-.menuitems:hover {
-    color: #AA6A32;
-    text-decoration: underline solid 3px #AA6A32;
-}
-
 .nav-link:hover {
     color: #AA6A32;
     text-decoration: underline solid 3px #AA6A32;
@@ -77,7 +88,6 @@ body {
 .hp-hero {
     background-color: transparent;
     background-repeat: no-repeat;
-    height: 600px;
     background-position: right;
     background-size: contain;
     margin-bottom: 80px;
@@ -97,7 +107,7 @@ body {
 }
 
 .shortbio {
-    margin-top: 40px;
+    margin-top: 20px;
     color: #333333;
     align-items: right;
     justify-items: right;
@@ -433,16 +443,17 @@ h4 {
 
 .h6connect {
     color: #333333;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Inter', sans-serif;
     margin-left: 30px;
     font-size: 18px;
-    font-weight: lighter;
+    font-weight:lighter;
 
 }
 
 p {
     color: #333333;
     font-size: 17px;
+    font-weight: lighter;
 
 }
 
@@ -772,7 +783,7 @@ h5 {
     width: auto;
     height: auto;
     border-top: 0px solid #e3e2e1;
-    border-bottom: 1px solid #e3e2e1;
+    border-bottom: 2px solid #333333;
     border-radius: 0px;
     margin-bottom: 40px;
 }
